--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta property="og:title" content="Ancaman Digital">
+    <meta property="og:description" content="Website kelompok Rafi dan Yusuf">
+    <meta property="og:image" content="../src/assets/home/title/background.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
