--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description" content="Website kelompok Rafi dan Yusuf">
     <meta property="og:image" content="../src/assets/home/title/background.png">
     <meta name="description" content="This is an example of a meta description.  This will often show up in search results.">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Ancaman Digital</title>
   </head>
   <body>
     <noscript>
