--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Ancaman Digital">
     <meta property="og:description" content="Website kelompok Rafi dan Yusuf">
     <meta property="og:image" content="../src/assets/home/title/background.png">
-    <meta name="description" content="This is an example of a meta description.  This will often show up in search results.">
+    <meta name="description" content="Ancaman digital adalah ancaman terhadap informasi sensitif pada sistem komputer atau jaringan internet.">
     <title>Ancaman Digital</title>
   </head>
   <body>
